2005-04-21 00:39 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormViewEditor.m: Fix for double "setView:" call.
	* GormCore/GormViewWindow.m: Code cleanup.

2005-04-20 23:00 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormObjectEditor.m: Added copyright information.
	* GormLib/IBResourceManager.m: Added exception handling to prevent
	a problem unarchiving an object from the pasteboard from crashing
	the app.

2005-04-20 21:51 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormClassManager.m: Restrict instantiation of NSView and
	subclasses using Command-Shift-I.  This means that standalone views
	can only be created from objects which are draggable from the palette.
	* GormCore/GormViewEditor.m: Removed logging ever time a standalone 
	view is placed, as I don't consider the functionality experimental
	at this point.
	* GormCore/GormViewWindow.m: Size the window to accommodate the
	view if it already has size, if it doesn't resize the view to the
	window's dimensions.

2005-04-20 06:27 Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/2Controls/ControlsPalette.gorm: Corrected minor
	problem with switch and radio buttons in the controls palette.
	* TODO: Updated completed item.

2005-04-17 20:46 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormCustomClassInspector.m: In _replaceCellClassForObject:
	className: corrected a problem where the drawBackground flag
	is set to NO when changing the cell type.  It is now preserved when
	the new cell object is set.
	* Palettes/2Controls/GormButtonEditor.h: Added ivar.
	* Palettes/2Controls/GormButtonEditor.m: Corrects a bug reported
	by Matt Rice where the temporary text field becomes part of 
	the document when saving while editing a button.

2005-04-17 12:06 Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.m: Added code in loadDocument: and
	saveGormDocument: to use data from the new SubstituteClasses